<resources>
    <string name="app_name">ImDriving</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="start_driving">Start</string>
    <string name="stop_driving">Stop</string>
    <string name="time_left">Set timer for the app</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="view_trusted">View trusted contacts</string>
    <string name="add_trusted">Add trusted contacts</string>
    <string name="add_contacts_notice">Notice: If you add a trusted contact, that contact will receive your current location along with sms.</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="call_logs">Call logs</string>
    <string name="phone_no">Phone number</string>
    <string name="or">--or--</string>
    <string name="import_contact">Import contacts</string>
    <string name ="delete">Delete</string>

</resources>