<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.imdriving.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_trusted"
        android:name="com.example.imdriving.ui.addContacts.AddContactsFragment"
        android:label="@string/add_trusted"
        tools:layout="@layout/fragment_add_trusted_contacts" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.imdriving.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_view_trusted_contacts" />
</navigation>