<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addContacts.AddContactsFragment">
    <TextView
        android:id="@+id/dummyspace1"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/notice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.15"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/hdpi"
        android:scaleType="fitXY"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsl"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_contacts_notice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/phone_enter_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/dummyspace1"
        android:layout_marginTop="8dp"
        android:weightSum="3">
        <EditText
            android:id="@+id/enter_phone_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsl"
            android:hint="@string/phone_no"
            android:textColorHint="@color/white"
            android:textAlignment="center"/>
        <ImageButton
            android:id="@+id/add_phone_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_group_add_24"
            android:layout_gravity="center"
            android:background="@color/transparent"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/dummyspace2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_enter_line"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsl"
        android:text="@string/or"/>

    <Button
        android:id="@+id/import_contact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/dummyspace2"
        app:layout_constraintWidth_percent="0.48"
        app:layout_constraintHeight_percent="0.08"
        android:background="@drawable/button_outline"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="10sp"
        android:fontFamily="@font/poppins"
        android:text="@string/import_contact"/>
    <TextView
        android:id="@+id/number_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/import_contact"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsl"/>

</androidx.constraintlayout.widget.ConstraintLayout>